--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
     <title>Navbar</title>
    <link rel="stylesheet" href="style.css">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 <nav>
@@ -22,45 +23,51 @@
 
 
 <section id="harga" class="harga">
-
-<div class="card-main">
-    <div class="card-item">
-        <img height="100" src="x.jpg">
-        <h3 class="card-judul">
-           Megawati Soekarno
-        </h3>
-        <p class="card-deskripsi">
-            Megawati Soekarno adalah presiden kelima INDONESIA dari partai BANTENG MERAH (PDI Perjuangan) masak ya direbus aja
-        </p>   
-        <button>klik sayang untuk membaca</button>
+    <div class="row">
+        <div class="col">
+    <div class="card" style="width: 18rem;">
+        <img src="joko.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">JOKOWI DODO</h5>
+          <p class="card-text">Jokowi Dodo adalah presiden ke7 INDONESIA</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
     </div>
+    <div class="col">
+<div class="card" style="width: 18rem;">
+    <img src="puan.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">PUAN MAHARANI</h5>
+      <p class="card-text">Puan Maharani adalah ketua DPR</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
 </div>
-<div class="card-main">
-    <div class="card-item">
-        <img height="100" src="joko.jpg">
-        <h3 class="card-judul">
-            Jokowi Dodo
-        </h3>
-        <p class="card-deskripsi">
-           Jokowi Dodo adalah presiden ketujuh INDONESIA dari partai BANTENG MERAH (PDI Perjuangan) YNKTS
-        </p>     
-        <button>klik sayang untuk membaca</button>
-    </div>  
+<div class="col">
+<div class="card" style="width: 18rem;">
+    <img src="x.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">MEGAWATI SOEKARNO</h5>
+      <p class="card-text">bu megawati adalah presiden ke5 INDONESIA</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
 </div>
-<div class="card-main">
-    <div class="card-item">
-        <img height="100" src="puan.jpeg">
-        <h3 class="card-judul">
-            Puan Maharani 
-        </h3>
-        <p class="card-deskripsi">
-            Puan Maharani adalah Ketua DPR dari partai banteng merah (PDI Perjuangan) kok di mute
-        </p>     
-        <button>klik sayang untuk membaca</button>
-    </div>  
+<div class="col">
+<div class="card" style="width: 18rem;">
+    <img src="n.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">PDI PERJUANGAN</h5>
+      <p class="card-text">PDI Perjuangan adalah partai yang menaungi para anggota di atas</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+</div>
 </div>
 </section>
 
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
