--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="card-body">
           <h5 class="card-title">JOKOWI DODO</h5>
           <p class="card-text">Jokowi Dodo adalah presiden ke7 INDONESIA</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">baca selengkapnya</a>
         </div>
       </div>
     </div>
@@ -40,7 +40,7 @@
     <div class="card-body">
       <h5 class="card-title">PUAN MAHARANI</h5>
       <p class="card-text">Puan Maharani adalah ketua DPR</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="#" class="btn btn-primary">baca selengkapnya</a>
     </div>
   </div>
 </div>
@@ -50,7 +50,7 @@
     <div class="card-body">
       <h5 class="card-title">MEGAWATI SOEKARNO</h5>
       <p class="card-text">bu megawati adalah presiden ke5 INDONESIA</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="#" class="btn btn-primary">baca selengkapnya</a>
     </div>
   </div>
 </div>
@@ -60,7 +60,7 @@
     <div class="card-body">
       <h5 class="card-title">PDI PERJUANGAN</h5>
       <p class="card-text">PDI Perjuangan adalah partai yang menaungi para anggota di atas</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="#" class="btn btn-primary">baca selengkapnya</a>
     </div>
   </div>
 </div>
