--- a/index.html
+++ b/index.html
@@ -30,7 +30,30 @@
         <div class="card-body">
           <h5 class="card-title">JOKOWI DODO</h5>
           <p class="card-text">Jokowi Dodo adalah presiden ke7 INDONESIA</p>
-          <a href="#" class="btn btn-primary">baca selengkapnya</a>
+          <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  baca sekarang
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">JOKOWI DODO</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <img src="joko.jpg" class="card-img-top" alt="...">
+        Jokowi Dodo adalah presiden ke7 INDONESIA
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">KELUAR</button>
+        <button type="button" class="btn btn-primary">baca sekarang</button>
+      </div>
+    </div>
+  </div>
+</div>
         </div>
       </div>
     </div>
@@ -40,7 +63,30 @@
     <div class="card-body">
       <h5 class="card-title">PUAN MAHARANI</h5>
       <p class="card-text">Puan Maharani adalah ketua DPR</p>
-      <a href="#" class="btn btn-primary">baca selengkapnya</a>
+      <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+  baca sekarang
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">PUAN MAHARANI</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <img src="puan.jpeg" class="card-img-top" alt="...">
+        Puan Maharani adalah ketua DPR
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">KELUAR</button>
+        <button type="button" class="btn btn-primary">baca sekarang</button>
+      </div>
+    </div>
+  </div>
+</div>
     </div>
   </div>
 </div>
@@ -50,7 +96,30 @@
     <div class="card-body">
       <h5 class="card-title">MEGAWATI SOEKARNO</h5>
       <p class="card-text">bu megawati adalah presiden ke5 INDONESIA</p>
-      <a href="#" class="btn btn-primary">baca selengkapnya</a>
+      <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal1">
+  baca sekarang
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">MEGAWATI SOEKARNO</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <img src="x.jpg" class="card-img-top" alt="...">
+        bu megawati adalah presiden ke5 INDONESIA
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">KELUAR</button>
+        <button type="button" class="btn btn-primary">MASUK LEBIH DALAM</button>
+      </div>
+    </div>
+  </div>
+</div>
     </div>
   </div>
 </div>
@@ -60,14 +129,72 @@
     <div class="card-body">
       <h5 class="card-title">PDI PERJUANGAN</h5>
       <p class="card-text">PDI Perjuangan adalah partai yang menaungi para anggota di atas</p>
-      <a href="#" class="btn btn-primary">baca selengkapnya</a>
+      <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal4">
+  baca sekarang
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">PDI Perjuangan</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <img src="n.jpg" class="card-img-top" alt="...">
+        PDI Perjuangan adalah partai yang menaungi para anggota di atas
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">KELUAR</button>
+        <button type="button" class="btn btn-primary">MASUK LEBIH DALAM</button>
+      </div>
+    </div>
+  </div>
+</div>
     </div>
   </div>
 </div>
 </div>
 </section>
+<div class="container-fluid py-5">
+  <h2 class="text-center mb-3 fw-bold">Our Latest Work</h2>
+  <div class="row row-cols-4 g-0">
+      <div class="col-3 g-0">
+          <img src="joko.jpg" alt="" class="w-100" />
+      </div>
+      <div class="col-3 g-0">
+          <img src="n.jpg" alt="" class="w-100" />
+      </div>
+      <div class="col-3 g-0">
+          <img src="puan.jpeg" alt="" class="w-100" />
+      </div>
+      <div class="col-3 g-0">
+          <img src="x.jpg" alt="" class="w-100" />
+      </div>
+  </div>
+
+  <div class="row row-cols-4 w-100 mx-auto g-0">
+      <div class="col-3 g-0">
+          <img src="joko.jpg" alt="" class="w-100" />
+      </div>
+      <div class="col-3 g-0">
+          <img src="n.jpg" alt="" class="w-100" />
+      </div>
+      <div class="col-3 g-0">
+          <img src="puan.jpeg" alt="" class="w-100" />
+      </div>
+      <div class="col-3 g-0">
+          <img src="x.jpg" alt="" class="w-100" />
+      </div>
+  </div>
+</div>
 
 
+
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
